# real-time-mtt

./: .gitignore  README.txt  spheroDetector.cpp
matlab/: README.txt  load_confidence.m  process_all_confidence.m  process_all_confidence_object.m  sample_eval_script.m  save_confidence.m
matlab/LineExtractor/: genLineImage.m  get_line_equ.m  heuristic_vote.m  hough_transform.m  hough_voting.cpp  lineangles.m  mexHeuristicVote.cpp  (+3 more)
paper/: Makefile  abstract.tex  ack.tex  bib.bib  conc.tex  design.tex  disc.tex  eval.tex  impl.tex  intro.tex  paper.tex  related.tex
sample/: README.txt  seq02_conflist.txt  seq02_imlist.txt  spheros_imlist.txt
standalone_tracker/: CMakeLists.txt  Makefile  README  track.sh  track_kitti.sh  track_sphero.sh  track_toyota.sh
standalone_tracker/include/common/: FeatTracker.h  assignmentoptimal.h  cam_state.h  gfeat_state.h  global.h  lines.h  mcmc_sample.h  meanshiftTracker.h  ped_state.h  states.h  util.h  vpestimator.h
standalone_tracker/include/observation/: BlobNode.h  DetectionReadinNode.h  FaceNode.h  HOGNode.h  ObservationManager.h  ObservationNode.h  SkinNode.h  roihog.h
standalone_tracker/include/prior/: PriorDist.h
standalone_tracker/include/proposal/: rjmcmc_proposal.h
standalone_tracker/include/tracker/: rjmcmc_tracker.h  target_manager.h
standalone_tracker/src/: BlobNode.cpp  DetectionReadinNode.cpp  FaceNode.cpp  FeatTracker.cpp  HOGNode.cpp  ObservationManager.cpp  PriorDist.cpp  SkinNode.cpp  TrackerConfig.h.in  assignmentoptimal.cpp  global.cpp  meanshiftTracker.cpp  people_tracker.cpp  rjmcmc_proposal.cpp  rjmcmc_tracker.cpp  roihog.cpp  target_manager.cpp  util.cpp  vpestimator.cpp
(+1224 files in other folders)
